fixed overflow issue

--- a/src/resources/styles.css
+++ b/src/resources/styles.css
@@ -100,7 +100,7 @@ header .header_logo_name {
 
 
 footer {
-    padding: 30px 0px;
+    padding: 20px 0px;
     text-align: center;
     font-size: 30px;
     font-family: 'Bangers', cursive;
@@ -131,7 +131,10 @@ footer .footer_copyright {
 .content {
     height: auto;
     text-align: center;
+    overflow: auto;
 }
+
+
 
 
 
